  kept open but the file object behaves like a closed file. The ``FileIO``
  object also got a new readonly attribute ``closefd``.

- Issue #3689: The list reversed iterator now supports __length_hint__
  instead of __len__.  Behavior now matches other reversed iterators.

- Issue #4509: Various issues surrounding resize of bytearray objects to
  which there are buffer exports.

Library
-------

- Partial fix to issue #1731706: memory leak in Tkapp_Call when calling
  from a thread different than the one that created the Tcl interpreter.
  Patch by Robert Hancock.

- Issue #5132: Fixed trouble building extensions under Solaris with 
  --enabled-shared activated. Initial patch by Dave Peterson.

- Issue #1581476: Always use the Tcl global namespace when calling into Tcl.

- Issue #2047: shutil.move() could believe that its destination path was
  inside its source path if it began with the same letters (e.g. "src" vs.
  "src.new").

- Issue 4920:  Fixed .next() vs .__next__() issues in the ABCs for
  Iterator and MutableSet.

- Issue 5021:  doctest.testfile() did not create __name__ and
  collections.namedtuple() relied on __name__ being defined.

- Issue #3881: Help Tcl to load even when started through the
  unreadable local symlink to "Program Files" on Vista.

- Issue #4710: Extract directories properly in the zipfile module;
  allow adding directories to a zipfile.

- Issue #5008: When a file is opened in append mode with the new IO library,
  do an explicit seek to the end of file (so that e.g. tell() returns the
  file size rather than 0). This is consistent with the behaviour of the
  traditional 2.x file object.

- Issue #3997: zipfiles generated with more than 65536 files could not be
  opened with other applications.

- Issue 4816: itertools.combinations() and itertools.product were raising
  a ValueError for values of *r* larger than the input iterable.  They now
  correctly return an empty iterator.
